k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiap-mecanica-ingress
  namespace: fiap-mecanica
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/subnets: subnet-06194f2c2a5f43cff,subnet-0b0a312b85a957549
    alb.ingress.kubernetes.io/security-groups: sg-0ec5d0848546fca73
spec:
  ingressClassName: alb
  rules:
    - host: api.fiap-mecanica.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fiap-mecanica-service
                port:
                  number: 80
